# kdeets

./: .gitignore  CHANGELOG.md  Cargo.toml  PRLOG.md  README.md  SECURITY.md  release-hook.sh  release.toml  renovate.json  sonar-project.properties
.circleci/: config.yml  config.yml.backup  release.yml  update_prlog.yml
.config/: nextest.toml
crates/kdeets/: CHANGELOG.md  Cargo.toml  README.md  release-hook.sh  release.toml
crates/kdeets/src/: combo.rs  crate_versions.rs  lib.rs  main.rs  setup.rs
crates/kdeets/src/setup/: disksize.rs  output.rs
crates/kdeets/tests/cmd/: crate.trycmd  help.trycmd  rust.trycmd  version.trycmd
crates/kdeets/tests/registry/: holochain_serialized_bytes_derive-0.0.55.crate  some_crate-0.2.1.crate
crates/kdeets/tests/registry/index/wi/nd/: windows-targets  windows_aarch64_msvc  windows_i686_msvc  windows_x86_64_gnullvm  windows_x86_64_msvc
src/: crate_versions.rs  error.rs  lib.rs  main.rs  rust_versions.rs  setup.rs
src/setup/: disksize.rs  output.rs  output_registry.rs
test-reg/: Cargo.toml
tests/cmd/: crate.trycmd  help.trycmd  logging.trycmd  version.trycmd
tests/registry/: forestry-1.4.1.crate
tests/registry/index/3/s/: syn
tests/registry/index/co/lo/: colored
tests/registry/index/fo/re/: forestry
tests/registry/index/ho/lo/: holochain_serialized_bytes_derive
tests/registry/index/pr/oc/: proc-macro2
tests/registry/index/so/me/: some_crate
tests/registry/index/un/ic/: unicode-ident
tests/registry/index/wi/nd/: windows_aarch64_gnullvm  windows_i686_gnu  windows_x86_64_gnu
