[package]
name = "kdeets"
version = "0.1.27"
edition = "2024"
description = "Query crates.io for information about a crate."
license = "MIT"
documentation = "https://docs.rs/kdeets"
repository = "https://github.com/jerus-org/kdeets"
rust-version = "1.89"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity = "2.1.0"
clap-verbosity-flag = "3.0.4"
colorful = "0.3.2"
env_logger = "0.11.8"
log = "0.4.29"
semver = "1.0.27"
smol_str = "0.3.4"
tame-index = { version = "0.25.0", features = [
    "git",
    "local",
    "local-builder",
    "sparse",
] }
thiserror = "2.0.17"

[lib]
name = "kdeets_lib"
path = "src/lib.rs"

[dev-dependencies]
fs_extra = "1.3.0"
rstest = "0.26.1"
simple_logger = "5.1.0"
tempfile = "3.23.0"
trycmd = "0.15.11"
