[workspace]
members = ["crates/kdeets"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.89"
repository = "https://github.com/jerus-org/kdeets"

[workspace.dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap-verbosity = "2.1.0"
clap-verbosity-flag = "3.0.4"
colorful = "0.3.2"
env_logger = "0.11.8"
log = "0.4.29"
semver = "1.0.27"
smol_str = "0.3.5"
tame-index = { version = "0.26.0", features = [
    "local",
    "local-builder",
    "sparse",
] }
thiserror = "2.0.18"

# dev dependencies
fs_extra = "1.3.0"
rstest = "0.26.1"
simple_logger = "5.1.0"
tempfile = "3.24.0"
trycmd = "0.15.11"

[workspace.lints.clippy]
uninlined-format-args = "warn"
