[package]
name = "kdeets"
version = "0.1.28"
description = "Query crates.io for information about a crate."
documentation = "https://docs.rs/kdeets"
readme = "README.md"
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "kdeets_lib"
path = "src/lib.rs"

[dependencies]
clap.workspace = true
clap-verbosity.workspace = true
clap-verbosity-flag.workspace = true
colorful.workspace = true
env_logger.workspace = true
log.workspace = true
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls-no-provider",
] }
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
semver.workspace = true
smol_str.workspace = true
tame-index.workspace = true
thiserror.workspace = true
webpki-roots = "1.0.6"

[dev-dependencies]
fs_extra.workspace = true
rstest.workspace = true
simple_logger.workspace = true
tempfile.workspace = true
trycmd.workspace = true

[lints]
workspace = true
